Fix button spacing on choice screen

--- a/src/stylesheets/modules/modern_stack_onboarding/index.styl
+++ b/src/stylesheets/modules/modern_stack_onboarding/index.styl
@@ -173,7 +173,7 @@
   &--block-button-wrapper
     position: absolute
     left: 0
-    bottom: 25px
+    bottom: 38px
     width: 100%
 
   &--next-button
